syntax = "proto3";
package mapnificent;


message MapnificentNetwork {
  string Cityid = 1;

  message Stop {
    double Latitude = 1;
    double Longitude = 2;

    message TravelOption {
      int32 Stop = 1;
      int32 TravelTime = 2;
      int32 StayTime = 3;
      string Line = 4;
      int32 WalkDistance = 5;
    }
    repeated TravelOption TravelOptions = 3;
    string Name = 4;
  }
  repeated Stop Stops = 2;

  message Line {
    string LineId = 1;
    message LineTime {
      int32 Interval = 1;
      int32 Start = 2;
      int32 Stop = 3;
      int32 Weekday = 4;
    }
    repeated LineTime LineTimes = 2;
    string Name = 3;
  }
  repeated Line Lines = 3;
}
